fix spacing of intro section on mobile

--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ body:before {
     text-align: center;
     font-weight: 300;
     line-height: 34px;
-    margin-top: 100px;
+    margin-top: 75px;
 }
 
 .social-icons {
@@ -285,7 +285,7 @@ body:before {
 
 hr {
     width: 860px;
-    margin-top: 100px;
+    margin-top: 75px;
 }
 
 .section-title {
@@ -482,6 +482,7 @@ hr {
     display: flex;
     height: 20px;
     align-items: center;
+    margin-top: 30px;
 }
 
 .about-container {
